1.51.1 - Fix horizontal overflow

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
   padding: 60px;
   color: #707070;
   line-height: 1.3;
+  overflow-x: hidden;
 }
 
 a, a:active, a:hover, a:visited {
